--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  dio: ^5.8.0+1
+  intl: ^0.20.2
+  flutter_native_splash: ^2.4.0
+  shared_preferences: ^2.2.3
+  flutter_screenutil: ^5.9.3
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
