--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   intl_phone_field: ^3.2.0
   persistent_bottom_nav_bar: ^6.2.1
+  firebase_core: ^3.4.0
 
 dev_dependencies:
   flutter_test:
